# CreMail

./: CreMail_zh.md  LICENSE  MANIFEST.in  README.md  __init__.py  email_config.json  pyproject.toml  requirements.txt  setup.py
cremail/: CreMail.py  __init__.py
